Add Windows compatibility and update documentation
- Add python-magic-bin for Windows (no libmagic install needed)
- Add Windows setup instructions in README
- Update pipeline diagram with violence detection

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ dependencies = [
     "pillow>=10.0.0",
     "pyyaml>=6.0",
     "numpy>=1.24.0",
-    "python-magic>=0.4.27",
+    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
+    "python-magic>=0.4.27; sys_platform != 'win32'",
     "opennsfw2>=0.10.0",
     "tensorflow>=2.13.0",
     "opencv-python>=4.8.0",
