--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "numpy>=1.24.0",
     "python-magic-bin>=0.4.14; sys_platform == 'win32'",
     "python-magic>=0.4.27; sys_platform != 'win32'",
+    "certifi>=2023.0.0",
     "opennsfw2>=0.10.0",
     "tensorflow>=2.13.0",
     "opencv-python>=4.8.0",
