Add Visual Question Answering (VQA) feature
- Add image_qa.py for asking questions about images
- Uses BLIP model (Salesforce) for VQA and captioning
- Integrates with guardrails - only allows Q&A on passed images
- Supports: --describe, --question, --interactive modes
- Update README with usage instructions

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ Thumbs.db
 # Project specific
 test_images/*.jpg
 test_images/*.png
+test_images/*.webp
+test_images/*.jpeg
 !test_images/README.txt
 *.log
 uv.lock
