Rename guard_image.py to image_guard.py for consistency
- Rename main file to match image_qa.py naming convention
- Update all imports in demo_app.py and image_qa.py
- Update README and pyproject.toml references

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dev = [
 
 [tool.hatch.build.targets.wheel]
 packages = ["."]
-only-include = ["guard_image.py", "demo_app.py"]
+only-include = ["image_guard.py", "image_qa.py", "demo_app.py"]
 
 [build-system]
 requires = ["hatchling"]
